--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remult": "^0.18.0"
+    "remult": "^0.18.0",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/swagger-ui-express": "^4.1.3",
     "@vitejs/plugin-react": "^3.1.0",
     "tsx": "^3.12.3",
     "typescript": "^4.9.3",
