--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "start": "tsx src/server",
     "dev": "vite",
     "dev-node": "tsx watch src/server",
     "start": "node dist/server/",
