--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "tsc && vite build && tsc -p tsconfig.server.json && tsx src/server",
+    "start": "npm run build && tsx src/server",
     "dev": "vite",
-    "dev-node": "tsx watch src/server",
+    "dev-node": "npm run build && tsx watch src/server",
     "build": "tsc && vite build && tsc -p tsconfig.server.json",
     "preview": "vite preview"
   },
