--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "react-vite-express-starter",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "start": "npm run build && tsx src/server",
-    "dev": "vite",
-    "dev-node": "npm run build && tsx watch src/server",
-    "build": "tsc && vite build && tsc -p tsconfig.server.json",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "pg": "^8.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "remult": "^0.18.0",
-    "swagger-ui-express": "^4.6.3"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@vitejs/plugin-react": "^3.1.0",
-    "tsx": "^3.12.3",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
-  }
+    "name": "react-vite-express-starter",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "start": "npm run build && tsx src/server",
+        "dev": "vite",
+        "dev-node": "npm run build && tsx watch src/server",
+        "build": "tsc && vite build && tsc -p tsconfig.server.json",
+        "preview": "vite preview",
+        "format": "prettier --write 'src/**/*.{ts,tsx}'"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "pg": "^8.10.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "remult": "^0.18.0",
+        "swagger-ui-express": "^4.6.3"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "@types/swagger-ui-express": "^4.1.3",
+        "@vitejs/plugin-react": "^3.1.0",
+        "prettier": "2.8.8",
+        "tsx": "^3.12.3",
+        "typescript": "^4.9.3",
+        "vite": "^4.1.0"
+    }
 }
