--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "remult": "^0.18.0",
-        "swagger-ui-express": "^4.6.3"
+        "swagger-ui-express": "^4.6.3",
+        "winston": "^3.8.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
