--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "format": "prettier --write 'src/**/*.{ts,tsx}'"
     },
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
         "pg": "^8.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -22,8 +24,10 @@
         "winston": "^3.8.2"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
         "@types/swagger-ui-express": "^4.1.3",
