Remove build step of front end code for deployment

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "version": "0.0.0",
     "scripts": {
-        "start": "npm run build && tsx src/server",
+        "start": "tsx src/server",
         "dev": "vite",
         "dev-node": "npm run build && tsx watch src/server",
         "build": "tsc && vite build && tsc -p tsconfig.server.json",
