--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dev-node": "npm run build && tsx watch src/server",
         "build": "tsc && vite build && tsc -p tsconfig.server.json",
         "preview": "vite preview",
-        "format": "prettier --write 'src/**/*.{ts,tsx}'"
+        "format": "prettier --write 'src/**/*.{ts,tsx}'",
+        "test": "mocha --require tsx './src/**/*.test.ts'"
     },
     "dependencies": {
         "bcrypt": "^5.1.0",
@@ -24,15 +25,22 @@
         "winston": "^3.8.2"
     },
     "devDependencies": {
+        "@faker-js/faker": "^8.0.1",
         "@types/bcrypt": "^5.0.0",
+        "@types/chai": "^4.3.5",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.2",
+        "@types/mocha": "^10.0.1",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@types/sinon": "^10.0.15",
         "@types/swagger-ui-express": "^4.1.3",
         "@vitejs/plugin-react": "^3.1.0",
+        "chai": "^4.3.7",
+        "mocha": "^10.2.0",
         "prettier": "2.8.8",
+        "sinon": "^15.1.0",
         "tsx": "^3.12.3",
         "typescript": "^4.9.3",
         "vite": "^4.1.0"
