--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
         "test": "mocha --require tsx './src/**/*.test.ts'"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/material": "^5.13.1",
         "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
+        "dayjs": "^1.11.7",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "pg": "^8.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.11.2",
         "remult": "^0.18.0",
         "swagger-ui-express": "^4.6.3",
         "winston": "^3.8.2"
@@ -34,6 +40,7 @@
         "@types/mocha": "^10.0.1",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@types/react-router-dom": "^5.3.3",
         "@types/sinon": "^10.0.15",
         "@types/swagger-ui-express": "^4.1.3",
         "@vitejs/plugin-react": "^3.1.0",
@@ -44,5 +51,14 @@
         "tsx": "^3.12.3",
         "typescript": "^4.9.3",
         "vite": "^4.1.0"
+    },
+    "browser": {
+        "jsonwebtoken": false,
+        "bcrypt": false,
+        "cors": false,
+        "express": false,
+        "pg": false,
+        "swagger-ui-express": false,
+        "winston": false
     }
 }
